--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,7 +4,7 @@ on:
   schedule: [{cron: "0 * * * *"}]
   # Lines below let you run workflow manually and on each commit (optional)
   workflow_dispatch:
-  push: {branches: ["master", "main", "deploy", "develop", "develop2", "dev"]}
+  push: {branches: ["master", "main", "deploy", "develop", "develop2", "dev", "amin-dev"]}
 jobs:
   github-metrics:
     runs-on: ubuntu-latest
